# ObjectTracking-DLproject

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
experiments/model_improvements/: __init__.py  experiment.toml  run_experiment.py
experiments/rfdetr/: exp-config.yaml  run_test.py
src/: MO15ds.py  RF_DETR.py  train.py
src/experiments/rfdetr/: exp-config.yaml  run_test.py
src/objtracker/: MO15ds.py  RF_DETR.py  __init__.py  compare_models.py  evaluate.py  optuna_search.py  paths.py  pipeline.py  run_demo.py  train.py  visualize.py
src/objtracker/cli/: __init__.py  compare_models.py  evaluate.py  optuna_search.py  train.py  visualize.py
src/objtracker/datasets/: __init__.py  coco.py  coco_dataset.py  download_mot15.py  mot15.py  mot15_dataset.py  yolo.py  yolo_formater.py
src/objtracker/metrics/: __init__.py  mean_average_precision.py
src/objtracker/models/: __init__.py  base.py  factory.py  optim.py  rf_detr.py  yolo11.py
src/objtracker/tracking/: __init__.py  base.py  bot_sort_track.py  byte_track.py  deep_sort_track.py  factory.py  supervision_adapter.py  types.py
src/objtracker/utils/: __init__.py  coco_parser.py  tensorboard.py  wandb.py
tests/: conftest.py  test_detector_factory.py  test_forward_pass.py  test_optim.py  test_pipeline.py
tests/cli/: test_commands.py
tests/datasets/: test_coco.py  test_mot15.py  test_yolo.py
tests/metrics/: test_mean_average_precision.py
tests/tracking/: __init__.py  test_byte_track.py  test_trackers.py
tests/utilities/: test_loggers.py
utils/: coco_parser.py
