[project]
name = "objtracker"
version = "0.1.0"
description = "Object tracking library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.0",
    "numpy>=2.4.2",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "pillow>=12.0.0",
    "pycocotools>=2.0.10",
    "pytorch-lightning>=2.6.1",
    "rfdetr>=1.6.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchmetrics>=1.9.0",
    "trackers>=2.4.0",
    "ultralytics>=8.4.41",
    "wandb>=0.26.0",
]

[project.scripts]
objtracker-compare-models = "objtracker.cli.compare_models:main"
objtracker-evaluate = "objtracker.cli.evaluate:main"
objtracker-optuna = "objtracker.cli.optuna_search:main"
objtracker-train = "objtracker.cli.train:main"
objtracker-visualize = "objtracker.cli.visualize:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ty",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=src"
pythonpath = ["src"]
testpaths = ["tests"]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
ignore = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
